--- a/angular.json
+++ b/angular.json
@@ -1,106 +1,121 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-    "5043-vision-forcast": {
-      "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "standalone": false
-        },
-        "@schematics/angular:directive": {
-          "standalone": false
-        },
-        "@schematics/angular:pipe": {
-          "standalone": false
-        }
-      },
-      "root": "",
-      "sourceRoot": "src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:application",
-          "options": {
-            "outputPath": "dist/5043-vision-forcast",
-            "index": "src/index.html",
-            "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
-            "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2MB",
-                  "maximumError": "5MB"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kB",
-                  "maximumError": "10kB"
-                }
-              ],
-              "outputHashing": "all"
+   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+   "version": 1,
+   "newProjectRoot": "projects",
+   "projects": {
+      "5043-vision-forcast": {
+         "projectType": "application",
+         "schematics": {
+            "@schematics/angular:component": {
+               "standalone": false
             },
-            "development": {
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true
-            }
-          },
-          "defaultConfiguration": "production"
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
-              "buildTarget": "5043-vision-forcast:build:production"
+            "@schematics/angular:directive": {
+               "standalone": false
             },
-            "development": {
-              "buildTarget": "5043-vision-forcast:build:development"
+            "@schematics/angular:pipe": {
+               "standalone": false
             }
-          },
-          "defaultConfiguration": "development"
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n"
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
-            "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          }
-        }
+         },
+         "root": "",
+         "sourceRoot": "src",
+         "prefix": "app",
+         "architect": {
+            "build": {
+               "builder": "@angular-devkit/build-angular:browser",
+               "options": {
+                  "outputPath": "dist",
+                  "index": "src/index.html",
+                  "polyfills": [
+                     "zone.js"
+                  ],
+                  "tsConfig": "tsconfig.app.json",
+                  "assets": [
+                     {
+                        "glob": "**/*",
+                        "input": "public"
+                     },
+                     {
+                        "glob": "**/*",
+                        "input": "./node_modules/ids-enterprise/dist/css",
+                        "output": "/assets/ids-enterprise/css"
+                     },
+                     {
+                        "glob": "**/*",
+                        "input": "./node_modules/ids-enterprise/dist/js/cultures",
+                        "output": "/assets/ids-enterprise/js/cultures"
+                     }
+                  ],
+                  "styles": [
+                     "src/styles.css"
+                  ],
+                  "scripts": [
+                     "node_modules/jquery/dist/jquery.min.js",
+                     "node_modules/d3/dist/d3.min.js",
+                     "node_modules/ids-enterprise/dist/js/sohoxi.min.js"
+                  ],
+                  "baseHref": "",
+                  "main": "src/main.ts"
+               },
+               "configurations": {
+                  "production": {
+                     "budgets": [
+                        {
+                           "type": "initial",
+                           "maximumWarning": "2MB",
+                           "maximumError": "5MB"
+                        },
+                        {
+                           "type": "anyComponentStyle",
+                           "maximumWarning": "6kB",
+                           "maximumError": "10kB"
+                        }
+                     ],
+                     "outputHashing": "all"
+                  },
+                  "development": {
+                     "optimization": false,
+                     "extractLicenses": false,
+                     "sourceMap": true
+                  }
+               },
+               "defaultConfiguration": "production"
+            },
+            "serve": {
+               "builder": "@angular-devkit/build-angular:dev-server",
+               "configurations": {
+                  "production": {
+                     "buildTarget": "5043-vision-forcast:build:production"
+                  },
+                  "development": {
+                     "buildTarget": "5043-vision-forcast:build:development"
+                  }
+               },
+               "defaultConfiguration": "development"
+            },
+            "extract-i18n": {
+               "builder": "@angular-devkit/build-angular:extract-i18n"
+            },
+            "test": {
+               "builder": "@angular-devkit/build-angular:karma",
+               "options": {
+                  "polyfills": [
+                     "zone.js",
+                     "zone.js/testing"
+                  ],
+                  "tsConfig": "tsconfig.spec.json",
+                  "assets": [
+                     {
+                        "glob": "**/*",
+                        "input": "public"
+                     }
+                  ],
+                  "styles": [
+                     "src/styles.css"
+                  ],
+                  "scripts": []
+               }
+            }
+         }
       }
-    }
-  }
+   }
 }
