--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
       "@angular/platform-browser": "^18.2.0",
       "@angular/platform-browser-dynamic": "^18.2.0",
       "@angular/router": "^18.2.0",
-      "rxjs": "~7.8.0",
-      "tslib": "^2.3.0",
-      "zone.js": "~0.14.10",
       "@infor-up/m3-odin": "7.1.1",
       "@infor-up/m3-odin-angular": "7.1.1",
-      "ids-enterprise-ng": "18.2.4"
+      "i18next": "^25.3.2",
+      "i18next-browser-languagedetector": "^8.2.0",
+      "i18next-http-backend": "^3.0.2",
+      "ids-enterprise-ng": "18.2.4",
+      "rxjs": "~7.8.0",
+      "tslib": "^2.3.0",
+      "zone.js": "~0.14.10"
    },
    "devDependencies": {
       "@angular-devkit/build-angular": "^18.2.12",
